--- a/profiles/templates/base.html
+++ b/profiles/templates/base.html
@@ -15,7 +15,7 @@
     <link rel="icon" href="../../favicon.ico">
     <link rel="canonical" href="https://getbootstrap.com/docs/3.3/examples/theme/">
 
-    <title>Theme Template for Bootstrap</title>
+    <title>GenerateDMSG</title>
 
     <!-- Bootstrap core CSS -->
     <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
