--- a/profiles/templates/navbar.html
+++ b/profiles/templates/navbar.html
@@ -9,7 +9,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">Bootstrap theme</a>
+            <a class="navbar-brand" href="#">generateDMSG</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
@@ -18,7 +18,7 @@
             {% url 'contact' as contact %}
                 <li {% if request.path == home %} class="active" {% endif %}><a href="{% url 'home' %}">Home</a></li>
                 <li {% if request.path == about %} class="active" {% endif %}><a href="{% url 'about' %}">About</a></li>
-                <li {% if request.path == contact %} class="active" {% endif %}><a href="{% url 'about' %}">Contact</a></li>
+                <li {% if request.path == contact %} class="active" {% endif %}><a href="{% url 'contact' %}">Contact</a></li>
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
                         aria-expanded="false">Dropdown <span class="caret"></span></a>
