--- a/profiles/templates/home.html
+++ b/profiles/templates/home.html
@@ -1,9 +1,10 @@
 {% extends 'base.html' %}
-
+{% load static %}
 {% block styles %}
 <style>
     .jumbotron {
         text-align: center;
+        
     }
 </style>
 {% endblock %}
@@ -11,14 +12,58 @@
 {% block jumbotron %}
 <!-- Main jumbotron for a primary marketing message or call to action -->
 <div class="jumbotron">
-    <h1>Theme example</h1>
-    <p>This is a template showcasing the optional theme stylesheet included in Bootstrap. Use it as a starting
-        point to create something more unique by building on or modifying it.</p>
+    <h1>generateDMSG</h1>
+    <p>Do you like funny shirts? How about a jacket or hoodie? We have hats too. 
+        Do you have your own saying or logo you want printed? Just let us know and we can make it happen.
+    </p>
 </div>
 {% endblock %}
 
     <body>
         {% block content %}
-        <h1>Hello World</h1>
+        <div class="row">
+            <div class="col-md-4">
+                <h2>It's a Whole Pot kinda Day</h2>
+                <a href="#"><img src="{% static 'img/Its_a_whole_pot.png' %}" class='img-responsive' /></a>
+                <p><a class="btn btn-default" href="#" role="button">View Details</a></p>
+            </div>
+            <div class="col-md-4">
+                <h2>In Case of Fire</h2>
+            <a href="#"><img src="{% static 'img/in_case_of_fire.png' %}" class='img-responsive'/></a>
+                <p><a class="btn btn-default" href="#" role="button">View Details</a></p>
+            </div>
+            <div class="col-md-4">
+            {% if request.user.is_authenticated %}
+            <h3>Hello {{ request.user }}</h3>
+            {% else %}   
+            <form class="login" method="POST" action="{% url 'account_login' %}">
+            {% csrf_token %}    
+            
+            
+                <div id="div_id_login" class="form-group"> <label for="id_login" class="control-label  requiredField">
+                        Login<span class="asteriskField">*</span> </label>
+                    <div class="controls "> <input type="text" name="login" placeholder="Username or e-mail" autofocus="autofocus"
+                            class="textinput textInput form-control" required="" id="id_login"> </div>
+                </div>
+                <div id="div_id_password" class="form-group"> <label for="id_password" class="control-label  requiredField">
+                        Password<span class="asteriskField">*</span> </label>
+                    <div class="controls "> <input type="password" name="password" placeholder="Password"
+                            class="textinput textInput form-control" required="" id="id_password"> </div>
+                </div>
+                <div class="form-group">
+                    <div id="div_id_remember" class="checkbox"> <label for="id_remember" class=""> <input type="checkbox"
+                                name="remember" class="checkboxinput" id="id_remember">
+                            Remember Me
+                        </label> </div>
+                </div>
+            
+            
+                <a class="btn btn-link button secondaryAction" href="{% url 'account_reset_password' %}">Forgot Password?</a>
+                <a class="btn btn-link button secondaryAction" href="{% url 'account_signup' %}">Signup</a>
+                <button class="btn btn-default primaryAction" type="submit">Sign In</button>
+            </form>
+            {% endif %}
+            </div>
+        </div>
         {% endblock %}
     </body>
