--- a/profiles/templates/profile.html
+++ b/profiles/templates/profile.html
@@ -1,6 +1,8 @@
 {% extends 'base.html' %}
-{% load static %}
+
 {% block content %}
-<h1>generateDMSG</h1>
+
+{{ user.username }}
+{{ user.email }}
 
 {% endblock %}
